# dbt-ai

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  .rumdl.toml  .sqlfmtignore  CLAUDE.md  Dockerfile  Makefile  README.md  dbt-bouncer.yml  dbt_project.yml  package-lock.yml  packages.yml  prek.toml  profiles.yml  pyproject.toml
.claude/: settings.local.json
.claude/commands/: add-tests.md  document-model.md  explain-model.md  fix-precommit.md  generate-exposure.md  generate-staging-model.md  generate-unit-tests.md  generate-verified-model.md  impact-analysis.md  rebase.md  resolve-merge-conflicts.md  review-sql.md  suggest-tests.md
.claude/skills/: dbt-explain-model.md  dbt-impact-analysis.md  dbt-review-sql.md  dbt-suggest-tests.md
.github/: dependabot.yml
.github/workflows/: ai_pr_description.yml  ai_pr_review.yml  auto_document.yml  cd_pipeline.yml  ci_pipeline.yml  claude_pr_review.yml  cost_estimation.yml  daily_pipeline.yml  fix_ci_failure.yml  fix_cloud_run_failure.yml  pre_commit_autoupdate.yml  weekly_abandoned_models.yml  weekly_codebase_review.yml  weekly_data_quality.yml
docs/superpowers/specs/: 2026-03-26-dependabot-design.md
macros/: generate_schema_name.sql
models/marts/: _marts__exposures.yml  _marts__models.yml  dim_stations.sql  fct_daily_station_metrics.sql  fct_trips.sql
openspec/: config.yaml
presentation/: slides.md
scripts/: build_slides.py  data_quality_checks.sql  deploy_alert_webhook.sh  find_abandoned_models.py  setup_gcp.sh
scripts/cloud_run_webhook/: main.py
seeds/: _seeds__models.yml  city_metadata.csv
tests/: assert_trip_duration_positive.sql
(+8 files in other folders)
